--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        line-height: 40px;
+        max-lines: 3;
     }
     .res {
         position: absolute;
